--- a/src/style/index.css
+++ b/src/style/index.css
@@ -16,7 +16,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     color: white;
-    padding: 0 100px;
     align-items: center;
     z-index: 9999;
 }
@@ -318,5 +317,27 @@ border: 2px solid rgba(255, 255, 255, 1);
   opacity: 1;
   transform: translateY(0px);
   background-color: rgba(0, 0, 0, 0);
+}
+
+.head-theater {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-padding 
+{
+    padding: 0 100px;
+}
+
+.head-theater-img {
+    width: 1200px;
+    height: 600px;
+    border-radius: 20px;
+    align-items: center;
+    margin-bottom: 50px;
+    text-align: center;
 }
 
