--- a/src/style/index.css
+++ b/src/style/index.css
@@ -319,25 +319,24 @@ border: 2px solid rgba(255, 255, 255, 1);
   background-color: rgba(0, 0, 0, 0);
 }
 
-.head-theater {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .main-padding 
 {
     padding: 0 100px;
 }
 
-.head-theater-img {
-    width: 1200px;
-    height: 600px;
-    border-radius: 20px;
+.main-theater {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
     text-align: center;
+
+    height: 100vh;
+}
+
+.main-theater .head-theater-text {
+    color: white;
+    font-size: 40px;
+    font-weight: 800;
 }
 
