--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,6 +5,10 @@
     background-color: rgb(106, 99, 99);
 }
 
+body {
+    all: unset !important;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -227,96 +231,100 @@
 
 .main-theater-grid
 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-top: 60px;
-    width: 100%;
-    gap: 50px;
-    box-sizing: border-box;
+    display: grid !important;
+    grid-template-columns: 1fr 1fr 1fr 1fr !important;
+    margin-top: 60px !important;
+    width: 100% !important;
+    gap: 50px !important;
+    box-sizing: border-box !important;
+    text-align: left;
+    margin-bottom: 60px;
 }
 
 .theater
 {
-    transition: background-color 0.7s ease;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    height: 280px;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
+    transition: background-color 0.7s ease !important;
+    border-radius: 20px !important;
+    display: flex !important;
+    flex-direction: column !important;
+    height: 280px !important;
+    width: 100% !important;
+    position: relative !important;
+    overflow: hidden !important;
     /* background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/8/8b/Moscow-Bolshoi-Theare-1.jpg/274px-Moscow-Bolshoi-Theare-1.jpg'); Путь к вашему изображению */
-    background-size: cover; /* Покрыть весь элемент, сохраняя пропорции */
-    background-position: center; /* Центрирование изображения */
-    cursor: pointer;
+    background-size: cover !important; /* Покрыть весь элемент, сохраняя пропорции */
+    background-position: center !important; /* Центрирование изображения */
+    cursor: pointer !important;
 }
 
 .theater::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0); /* Изначально прозрачный */
-    transition: background-color 0.7s ease, border 0.7s ease; /* Плавное изменение фона */
-    border: 2px solid rgba(255, 255, 255, 0);
-    border-radius: 20px;
+    content: "" !important;
+    position: absolute !important;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    background: rgba(0, 0, 0, 0) !important; /* Изначально прозрачный */
+    transition: background-color 0.7s ease, border 0.7s ease !important; /* Плавное изменение фона */
+    border: 2px solid rgba(255, 255, 255, 0) !important;
+    border-radius: 20px !important;
 }
   
 .theater:hover::before {
-background: rgba(0, 0, 0, 0.6); /* Затемнение при наведении */
-border: 2px solid rgba(255, 255, 255, 1);
+background: rgba(0, 0, 0, 0.6) !important; /* Затемнение при наведении */
+border: 2px solid rgba(255, 255, 255, 1) !important;
 
 }
 
 .theater-name, .theater-year, .theater-discription {
-    transition: transform 0.7s ease, opacity 0.7s ease, padding-top 0.7s ease;
-    background-color: rgba(0, 0, 0, 0);
-    padding: 0px 20px;
-    color: white;
-    font-size: 16px;
+    transition: transform 0.7s ease, opacity 0.7s ease, padding-top 0.7s ease !important;
+    background-color: rgba(0, 0, 0, 0) !important;
+    padding: 0px 20px !important;
+    color: white !important;
+    font-size: 16px !important;
 }
 
 .theater-name
 {
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    padding: 15px 20px;
-    align-items: center;
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
-    font-size: 20px;
-    transform: translateY(180px);
+    background-color: rgba(0, 0, 0, 0.5) !important;
+    display: flex !important;
+    padding: 15px 20px !important;
+    align-items: center !important;
+    border-top: 2px solid white !important;
+    border-bottom: 2px solid white !important;
+    font-size: 20px !important;
+    transform: translateY(180px) !important;
+    /* justify-content: space-between;
+    flex-direction: column; */
 }
 
 
 .theater-year, .theater-discription {
-    transform: translateY(180px); /* Смещаем элементы вниз */
-    padding-top: 10px;
-    background-color: rgba(0, 0, 0, 0.5);
+    transform: translateY(180px) !important; /* Смещаем элементы вниз */
+    padding-top: 10px !important;
+    background-color: rgba(0, 0, 0, 0.5) !important;
 }
 
 .theater-year {
-    padding-top: 20px;
+    padding-top: 20px !important;
 }
 
 .theater:hover .theater-name {
 /* Поднимаем theater-name вверх */
-    transform: translateY(0px);
-    border-bottom: 2px solid white;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    background-color: rgba(0, 0, 0, 0);
-    padding-top: 50px;
+    transform: translateY(0px) !important;
+    border-bottom: 2px solid white !important;
+    border-bottom-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+    background-color: rgba(0, 0, 0, 0) !important;
+    padding-top: 50px !important;
 }
 
 .theater:hover .theater-year, 
 .theater:hover .theater-discription {
   /* Делаем theater-year и theater-discription видимыми и перемещаем в исходное положение */
-  opacity: 1;
-  transform: translateY(0px);
-  background-color: rgba(0, 0, 0, 0);
+  opacity: 1 !important;
+  transform: translateY(0px) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
 }
 
 .main-padding 
@@ -325,18 +333,83 @@ border: 2px solid rgba(255, 255, 255, 1);
 }
 
 .main-theater {
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-
-    height: 100vh;
 }
 
 .main-theater .head-theater-text {
     color: white;
     font-size: 40px;
     font-weight: 800;
+    margin: 25px 0;
+}
+
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: white !important;
+    background-color: transparent !important;
+    border-color: transparent !important;
+}
+.nav-tabs {
+    border-bottom: 3px solid var(--bs-nav-tabs-border-color) !important;
+    --bs-nav-tabs-border-width: none !important;
+}
+
+.tab-slider {
+    position: absolute;
+    height: 3px;
+    background-color: white;
+    transition: all 0.3s ease;
+}
+
+.max-w {
+    width: 100%;
+}
+
+.main-theater-info {
+}
+
+.main-theater-info-row {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+    margin-top: 40px;
+    margin-bottom: 0px;
+}
+
+.text-w5 {
+    color: white;
+    font-weight: 500;
+}
+
+.size-20 {
+    font-size: 20px;
+}
+
+.size-30 {
+    font-size: 30px;
+}
+
+a {
+    color: white !important;
+    font-size: 20px;
+    transition: font-size 0.3s ease;
+}
+
+a:hover {
+    color: white !important;
+    font-size: 21px;
+}
+
+.main-theater-info-history {
+    margin-top: 50px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    gap: 10px
 }
 
